# Quantum-Size-Effect

./: .clang-format  .clang-tidy  CMakeLists.txt  ConstData.cpp  ConstData.h  README.md  SampleData.cpp  SampleData.h  main.cpp
.github/workflows/: cu.yml
include/: CalculationInt.hpp  ElectronicCalculation.hpp  ElectronicDensity.hpp  ReadData.hpp  ResultCalculation.hpp  SampleInfo.hpp  SphereCalculation.hpp  UnitCellInfo.hpp
scripts/: plot.py
source/: CMakeLists.txt  ElectronicCalculation.cpp  ElectronicDensity.cpp  ReadData.cpp  ResultCalculation.cpp  SampleInfo.cpp  SphereCalculation.cpp  UnitCellInfo.cpp  main.cpp
source/configuration/: unitCellInfo.txt  values.txt
source/include/: Data.hpp  ElectronicCalculation.hpp  ElectronicDensity.hpp  ReadData.hpp  ReadDataInt.hpp  SampleInfo.hpp  SphereCalculation.hpp  UnitCellInfo.hpp
source/src/: ElectronicDensity.cpp  ReadData.cpp  SampleInfo.cpp  UnitCellInfo.cpp  main.cpp
source/src/configuration/: values.txt
tests/: CMakeLists.txt
tests/include/: CalculationIntMock.hpp  IsOpenMock.hpp  ReadDataIntMock.hpp
tests/src/: CellInfoTest.cpp  DensityTest.cpp  ElectronicCalcTest.cpp  ResultTest.cpp  SampleTest.cpp  SphereCalcTest.cpp
